// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Normal route config 1`] = `
<div>
  <div>
    Main
  </div>
</div>
`;

exports[`Normal route config 2`] = `
<div>
  <div>
    Fancy
  </div>
</div>
`;

exports[`Normal route config 3`] = `
<div>
  <div>
    Stuff
  </div>
</div>
`;
